made it smaller

--- a/index.html
+++ b/index.html
@@ -14,29 +14,12 @@
 
 <body>
     <div class="container text-center d-flex flex-column justify-content-center align-items-center">
-        <h1 class="display-3 mb-2">Tic Tac Toe</h1>
+        <h1 class="display-3 mb-5">Tic Tac Toe</h1>
         
         <div class="overlay hide">
             <p></p>
         </div>
         <div class="controls my-3 d-flex justify-content-between">
-            <div class="dropdown  d-inline-block">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    Select Level
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Easy</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Medium</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Hard</a></li>
-                </ul>
-            </div>
             <button type="button" class="restart btn btn-outline-success">Restart</button>
         </div>
 
@@ -78,7 +61,7 @@
 
     </div>
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-light text-muted mt-5">
+    <footer class="text-center text-lg-start bg-light text-muted">
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             Tic Tac Toe by
             <a class="text-reset fw-bold" href="https://github.com/KartikSinghK" target="_blank">Kartik Singh</a>
